--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,6 @@
     <string name="create_fail_msg">Create user failed</string>
     <string name="empty_password_msg">Password cannot be empty</string>
     <string name="empty_username_msg">Username cannot be empty</string>
+    <string name="author">Author</string>
+    <string name="genre">Genre</string>
 </resources>
