--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -13,4 +13,6 @@
     <string name="empty_username_msg">Uživatelské jméno nesmí být prázdné</string>
     <string name="author">Autor</string>
     <string name="genre">Žánr</string>
+    <string name="create_book_item">Přidat knihu</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
