--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,6 @@
     <string name="empty_username_msg">Username cannot be empty</string>
     <string name="author">Author</string>
     <string name="genre">Genre</string>
+    <string name="create_book_item">Create Book Item</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
